--- a/src/index.html
+++ b/src/index.html
@@ -68,17 +68,21 @@
                 <li class="pets-list__item">Котята</li>
             </ul>
             <div class="pets__pets-slider pets-slider">
-                <picture class="pets-slider__photo">
-                    <source media="(min-width: 1366px)" srcset="images/cat-catalog-desktop.png">
-                    <source media="(min-width: 768px)" srcset="images/cat-catalog-tablet.png, images/cat-catalog-desktop.png 2x">
-                    <img src="images/cat-catalog.jpg" alt="Фото кота">
-                </picture>
-                <picture class="pets-slider__photo--bg pets-slider__photo--left">
-                    <img src="images/cat-catalog-3.png" alt="Фото кота">
-                </picture>
-                <picture class="pets-slider__photo--bg pets-slider__photo--right">
-                    <img src="images/cat-catalog-2.png" alt="Фото кота">
-                </picture>
+                <div class="cat-gallery">
+                    <picture class="pets-slider__photo pets-slider__photo--bg pets-slider__photo--right">
+                        <source media="(min-width: 1366px)" srcset="images/cat-catalog-2-desktop.jpg">
+                        <img src="images/cat-catalog-2.png" alt="Фото кота">
+                    </picture>
+                    <picture class="pets-slider__photo pets-slider__photo--bg pets-slider__photo--left">
+                        <source media="(min-width: 1366px)" srcset="images/cat-catalog-3-desktop.jpg">
+                        <img src="images/cat-catalog-3.png" alt="Фото кота">
+                    </picture>
+                    <picture class="pets-slider__photo">
+                        <source media="(min-width: 1366px)" srcset="images/cat-catalog-desktop.jpg">
+                        <source media="(min-width: 768px)" srcset="images/cat-catalog-tablet.png, images/cat-catalog-desktop.jpg 2x">
+                        <img src="images/cat-catalog.jpg" alt="Фото кота">
+                    </picture>
+                </div>
                 <button class="pets-slider__button pets-slider__button--left">
                     <svg width="15" height="31" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#A07B50" stroke-width="2"/>
