Сверстал мобильную версию блока особенностей породы

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,8 @@
                     </picture>
                     <picture class="pets-slider__photo">
                         <source media="(min-width: 1366px)" srcset="images/cat-catalog-desktop.jpg">
-                        <source media="(min-width: 768px)" srcset="images/cat-catalog-tablet.png, images/cat-catalog-desktop.jpg 2x">
+                        <source media="(min-width: 768px)"
+                                srcset="images/cat-catalog-tablet.png, images/cat-catalog-desktop.jpg 2x">
                         <img src="images/cat-catalog.jpg" alt="Фото кота">
                     </picture>
                 </div>
@@ -95,6 +96,24 @@
                 </button>
             </div>
             <a href="#" class="pets__more-button button">Смотреть больше</a>
+        </div>
+    </section>
+    <section class="breed-features">
+        <div class="container">
+            <h2 class="breed-features__title section-title" id="breedFeatures">Особенности породы</h2>
+            <p class="breed-features__description section-description">
+                Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы получите
+                умное животное, которому нет равных
+            </p>
+            <picture class="breed-features__img">
+                <img src="images/cat-features.png" alt="" aria-labelledby="breedFeatures">
+            </picture>
+            <ul class="breed-features__list breed-features-list">
+                <li class="breed-features-list__item">Легко уживается в семьях с детьми или другими животными</li>
+                <li class="breed-features-list__item">Выполняет команды как дрессированная собака</li>
+                <li class="breed-features-list__item">Вес может достигать 12 кг, а длина 1 м</li>
+                <li class="breed-features-list__item">Внешний вид этой кошки похож на дикую рысь</li>
+            </ul>
         </div>
     </section>
 </main>
