Сверстал планшетную версию блока особенностей породы

--- a/src/index.html
+++ b/src/index.html
@@ -105,15 +105,20 @@
                 Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы получите
                 умное животное, которому нет равных
             </p>
-            <picture class="breed-features__img">
-                <img src="images/cat-features.png" alt="" aria-labelledby="breedFeatures">
-            </picture>
-            <ul class="breed-features__list breed-features-list">
-                <li class="breed-features-list__item">Легко уживается в семьях с детьми или другими животными</li>
-                <li class="breed-features-list__item">Выполняет команды как дрессированная собака</li>
-                <li class="breed-features-list__item">Вес может достигать 12 кг, а длина 1 м</li>
-                <li class="breed-features-list__item">Внешний вид этой кошки похож на дикую рысь</li>
-            </ul>
+            <div class="breed-features__wrapper">
+                <picture class="breed-features__img">
+                    <source media="(min-width: 1366px)" srcset="images/cat-features-desktop.png">
+                    <source media="(min-width: 768px)"
+                            srcset="images/cat-features-tablet.png, images/cat-features-desktop.png 2x">
+                    <img src="images/cat-features.png" alt="" aria-labelledby="breedFeatures">
+                </picture>
+                <ul class="breed-features__list breed-features-list">
+                    <li class="breed-features-list__item">Легко уживается в семьях с детьми или другими животными</li>
+                    <li class="breed-features-list__item">Выполняет команды как дрессированная собака</li>
+                    <li class="breed-features-list__item">Вес может достигать 12 кг, а длина 1 м</li>
+                    <li class="breed-features-list__item">Внешний вид этой кошки похож на дикую рысь</li>
+                </ul>
+            </div>
         </div>
     </section>
 </main>
