Сверстал десктопную, планшетную и мобильную версии блока преимуществ

--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,17 @@
             </div>
         </div>
     </section>
+    <section class="features">
+        <div class="container">
+            <h2 class="features__title section-title">Почему именно мы?</h2>
+            <p class="features__description section-description">Приобретая  животное в нашем питомнике, вы получите</p>
+            <ul class="features-list">
+                <li class="features-list__item features-list__item--med"><div class="features-list__inner">Бесплатное ветеринарное обслуживание 5 лет</div></li>
+                <li class="features-list__item features-list__item--cons"><div class="features-list__inner">Консультирование по любому вопросу 24 часа в сутки</div></li>
+                <li class="features-list__item features-list__item--feed"><div class="features-list__inner">Индивидуальный подбор питания для вашего кота</div></li>
+            </ul>
+        </div>
+    </section>
 </main>
 
 <footer class="footer">
