Сверстал мобильную версию блока об уходе за котом

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,8 @@
         <div class="container">
             <h2 class="breed-features__title section-title" id="breedFeatures">Особенности породы</h2>
             <p class="breed-features__description section-description">
-                Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы получите
+                Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы
+                получите
                 умное животное, которому нет равных
             </p>
             <div class="breed-features__wrapper">
@@ -124,11 +125,80 @@
     <section class="features">
         <div class="container">
             <h2 class="features__title section-title">Почему именно мы?</h2>
-            <p class="features__description section-description">Приобретая  животное в нашем питомнике, вы получите</p>
+            <p class="features__description section-description">Приобретая животное в нашем питомнике, вы получите</p>
             <ul class="features-list">
-                <li class="features-list__item features-list__item--med"><div class="features-list__inner">Бесплатное ветеринарное обслуживание 5 лет</div></li>
-                <li class="features-list__item features-list__item--cons"><div class="features-list__inner">Консультирование по любому вопросу 24 часа в сутки</div></li>
-                <li class="features-list__item features-list__item--feed"><div class="features-list__inner">Индивидуальный подбор питания для вашего кота</div></li>
+                <li class="features-list__item features-list__item--med">
+                    <div class="features-list__inner">Бесплатное ветеринарное обслуживание 5 лет</div>
+                </li>
+                <li class="features-list__item features-list__item--cons">
+                    <div class="features-list__inner">Консультирование по любому вопросу 24 часа в сутки</div>
+                </li>
+                <li class="features-list__item features-list__item--feed">
+                    <div class="features-list__inner">Индивидуальный подбор питания для вашего кота</div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="cat-care">
+        <div class="container">
+            <h2 class="cat-care__title section-title">Об уходе за Мейн-Куном</h2>
+            <ul class="care-list">
+                <li class="care-list__item">
+                    <div class="care-list__item-inner">
+                        <h3 class="care-list__item-title">Шерсть</h3>
+                        <p class="care-list__item-text">
+                            Мы разработали 8 правил, следуя которым, шерсть вашего кота всегда будет блестящей, мягкой и
+                            послушной
+                        </p>
+                    </div>
+                    <button class="care-list__item-button">
+                        <svg width="15" height="31" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#fff" stroke-width="2"/>
+                        </svg>
+                    </button>
+                </li>
+                <li class="care-list__item">
+                    <div class="care-list__item-inner">
+                        <h3 class="care-list__item-title">Уши и глаза</h3>
+                        <p class="care-list__item-text">
+                            Владельцам котов необходимо регулярно осматривать ушки и глазасвоих питомцев, ведь это может
+                            быть признаками заболевания
+                        </p>
+                    </div>
+                    <button class="care-list__item-button">
+                        <svg width="15" height="31" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#fff" stroke-width="2"/>
+                        </svg>
+                    </button>
+                </li>
+                <li class="care-list__item">
+                    <div class="care-list__item-inner">
+                        <h3 class="care-list__item-title">Когти</h3>
+                        <p class="care-list__item-text">
+                            Нужно ли стричь когти? Это мы и выясним, плюс ко всему расскажем как подобрать идеальную
+                            когтеточку
+                        </p>
+                    </div>
+                    <button class="care-list__item-button">
+                        <svg width="15" height="31" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#fff" stroke-width="2"/>
+                        </svg>
+                    </button>
+                </li>
+                <li class="care-list__item">
+                    <div class="care-list__item-inner">
+                        <h3 class="care-list__item-title">Питание</h3>
+                        <p class="care-list__item-text">
+                            В нашем питомнике существует два подхода: натуральное питание и питание промышленными
+                            кормами, но выбирать только вам
+                        </p>
+                    </div>
+                    <button class="care-list__item-button">
+                        <svg width="15" height="31" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#fff" stroke-width="2"/>
+                        </svg>
+                    </button>
+                </li>
             </ul>
         </div>
     </section>
