Адаптировал блок с командой под планшетные устройства

--- a/src/index.html
+++ b/src/index.html
@@ -211,6 +211,9 @@
             <blockquote class="team__comment employee-comment">
                 <div class="employee-comment__slider employee-slider">
                     <picture class="employee-slider__img">
+                        <source media="(min-width: 1366px)" srcset="images/team-desktop.jpg">
+                        <source media="(min-width: 768px)"
+                                srcset="images/team-tablet.jpg, images/team-desktop.jpg 2x">
                         <img src="images/team.jpg" alt="Фото сотрудника">
                     </picture>
                     <button class="employee-slider__button employee-slider__button--left">
@@ -227,11 +230,11 @@
                 <cite class="employee-comment__author">Серёжа Попов</cite>
                 <p class="employee-comment__position">Основатель питомника</p>
                 <p class="employee-comment__text">
-                    Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет.<br>
-                    Мы в ответе за каждого приобретенного вами питомца
+                    Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет.
+                    <br> Мы в ответе за каждого приобретенного вами питомца
                 </p>
                 <ul class="employee-comment__social-list social-list">
-                    <li class="social-list__item">
+                    <li class="social-list__item social-list__item--fb">
                         <a href="#">
                             <svg width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1.09903 2.26821C1.09903 2.54804 1.09903 3.79704 1.09903 3.79704H0V5.66651H1.09903V11.2219H3.35667V5.66666H4.87165C4.87165 5.66666 5.01354 4.77027 5.08231 3.79015C4.88513 3.79015 3.36521 3.79015 3.36521 3.79015C3.36521 3.79015 3.36521 2.70256 3.36521 2.51192C3.36521 2.32088 3.61136 2.06389 3.85465 2.06389C4.09748 2.06389 4.61 2.06389 5.08469 2.06389C5.08469 1.80936 5.08469 0.929906 5.08469 0.117676C4.45099 0.117676 3.73004 0.117676 3.41225 0.117676C1.04322 0.117547 1.09903 1.98887 1.09903 2.26821Z"
@@ -239,7 +242,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list__item">
+                    <li class="social-list__item social-list__item--tw">
                         <a href="#">
                             <svg width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13.3758 4.82625C14.223 4.75501 14.7977 4.36248 15.0189 3.82987C14.7133 4.0212 13.7646 4.2298 13.2406 4.03114C13.215 3.90568 13.1863 3.78651 13.1581 3.67892C12.7589 2.18493 11.392 0.981306 9.95978 1.12671C10.0757 1.07903 10.1932 1.03463 10.3104 0.994781C10.468 0.937234 11.393 0.78386 11.2473 0.451125C11.1245 0.158459 9.99446 0.672305 9.78168 0.739466C10.0626 0.631808 10.5271 0.446621 10.5769 0.117676C10.1465 0.177832 9.7241 0.385179 9.39768 0.686673C9.51552 0.55739 9.60492 0.399833 9.6239 0.230267C8.47614 0.977552 7.80567 2.48413 7.26308 3.94557C6.83703 3.52476 6.45941 3.19339 6.12065 3.00938C5.17031 2.48999 4.03402 1.94809 2.25031 1.27326C2.19556 1.87471 2.54218 2.67443 3.54095 3.20625C3.32456 3.17673 2.92884 3.24261 2.61235 3.31985C2.74124 4.00887 3.16217 4.57655 4.30172 4.85105C3.78094 4.88608 3.5118 5.00686 3.26788 5.26718C3.50507 5.74639 4.08386 6.31038 5.12503 6.19461C3.96746 6.70309 4.65304 7.64475 5.59496 7.50431C3.98811 9.1958 1.45474 9.07148 0 7.65672C3.79823 12.9314 12.0547 10.7762 13.2851 5.69563C14.207 5.70364 14.7489 5.37019 15.085 5.00257C14.5538 5.09443 13.784 4.9995 13.3758 4.82625Z"
@@ -247,7 +250,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list__item">
+                    <li class="social-list__item social-list__item--vk">
                         <a href="#">
                             <svg width="13" height="9" viewBox="0 0 13 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M12.8841 7.40894C12.8492 7.34464 12.633 6.82839 11.593 5.76731C10.5041 4.65621 10.6504 4.83663 11.9619 2.91543C12.7606 1.74538 13.08 1.03085 12.98 0.72539C12.8849 0.434218 12.2975 0.511031 12.2975 0.511031L10.3441 0.523535C10.3441 0.523535 10.1994 0.502099 10.0914 0.572659C9.98654 0.642326 9.9191 0.803096 9.9191 0.803096C9.9191 0.803096 9.60952 1.70876 9.19674 2.47867C8.32648 4.10334 7.97789 4.18908 7.8357 4.08816C7.50498 3.85325 7.58787 3.14319 7.58787 2.63944C7.58787 1.06479 7.80482 0.408317 7.16452 0.238615C6.95163 0.182346 6.79562 0.144833 6.25202 0.138581C5.55484 0.130542 4.96411 0.14126 4.63015 0.320786C4.40751 0.440471 4.23606 0.707527 4.34088 0.722711C4.47007 0.741467 4.7626 0.809348 4.91779 1.04157C5.1185 1.34078 5.11118 2.01423 5.11118 2.01423C5.11118 2.01423 5.22657 3.86754 4.84223 4.09798C4.57814 4.25607 4.21655 3.93364 3.44056 2.45902C3.04322 1.7043 2.74257 0.86919 2.74257 0.86919C2.74257 0.86919 2.68488 0.713779 2.58168 0.630715C2.45655 0.529787 2.28104 0.497633 2.28104 0.497633L0.423525 0.510137C0.423525 0.510137 0.144817 0.519069 0.0424345 0.652151C-0.0485722 0.770942 0.0351215 1.01567 0.0351215 1.01567C0.0351215 1.01567 1.4896 4.75535 3.13585 6.64082C4.6464 8.3691 6.3609 8.25566 6.3609 8.25566H7.13771C7.13771 8.25566 7.37254 8.22708 7.49198 8.08507C7.60249 7.95467 7.59843 7.70994 7.59843 7.70994C7.59843 7.70994 7.58299 6.56401 8.06728 6.3952C8.54425 6.22907 9.15692 7.50273 9.80616 7.99307C10.2969 8.36374 10.6699 8.28246 10.6699 8.28246L12.4063 8.25566C12.4063 8.25566 13.3148 8.19404 12.8841 7.40894Z"
