Адаптировал отзывы под планшетные устройства

--- a/src/index.html
+++ b/src/index.html
@@ -329,21 +329,13 @@
                     <blockquote class="review">
                         <div class="review__slider review-slider">
                             <picture class="review-slider__img">
-                                <source media="(min-width: 1366px)" srcset="images/team-desktop.jpg">
+                                <source media="(min-width: 1366px)" srcset="images/review-desktop.jpg">
                                 <source media="(min-width: 768px)"
-                                        srcset="images/team-tablet.jpg, images/team-desktop.jpg 2x">
+                                        srcset="images/review-tablet.jpg, images/review-desktop.jpg 2x">
                                 <img src="images/review.jpg" alt="Фото сотрудника">
                             </picture>
-                            <button class="review-slider__button review-slider__button--left">
-                                <svg width="11" height="27" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#A07B50" stroke-width="1"/>
-                                </svg>
-                            </button>
-                            <button class="review-slider__button review-slider__button--right">
-                                <svg width="11" height="27" viewBox="0 0 15 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 0.652832L13 15.978L1 30.2085" stroke="#A07B50" stroke-width="1"/>
-                                </svg>
-                            </button>
+                            <button class="review-slider__button review-slider__button--left"></button>
+                            <button class="review-slider__button review-slider__button--right"></button>
                         </div>
                         <cite class="review__author">Серёжа Попов</cite>
                         <p class="review__text">
