Сделал блоки с питомцами и особенностями породы резиновыми

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                         <source media="(min-width: 1366px)" srcset="images/cat-catalog-3-desktop.jpg">
                         <img src="images/cat-catalog-3.png" alt="Фото кота">
                     </picture>
-                    <picture class="pets-slider__photo">
+                    <picture class="pets-slider__photo pets-slider__photo--active">
                         <source media="(min-width: 1366px)" srcset="images/cat-catalog-desktop.jpg">
                         <source media="(min-width: 768px)"
                                 srcset="images/cat-catalog-tablet.png, images/cat-catalog-desktop.jpg 2x">
